tests/sema/bad/19_bind_impure.sg
fn imp(a:int) -> int { return a; }   // not pure
signal s = 0;
s := imp(1);                         // RHS must be pure -> error
